--- a/org.parallelj.common.jdt/pom.xml
+++ b/org.parallelj.common.jdt/pom.xml
@@ -1,6 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.parallelj.common.jdt</groupId>
+  <parent>
+    <groupId>org.parallelj</groupId>
+    <version>0.7.0-SNAPSHOT</version>
+    <artifactId>parallelj-studio</artifactId>
+  </parent>
   <artifactId>org.parallelj.common.jdt</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <packaging>eclipse-plugin</packaging>
 </project>
