--- a/org.parallelj.designer.validation/pom.xml
+++ b/org.parallelj.designer.validation/pom.xml
@@ -7,6 +7,6 @@
     <version>0.7.0-SNAPSHOT</version>
     <artifactId>parallelj-studio</artifactId>
   </parent>
-  <artifactId>org.parallelj.codegen</artifactId>
+  <artifactId>org.parallelj.designer.validation</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
