--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
 				<version>0.13.0</version>
 				<extensions>true</extensions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+				<source>1.6</source>
+				<target>1.6</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
