Updated for 0.8.0 first milestone release. Updated metadata for all components.

--- a/org.parallelj.model.edit/plugin.properties
+++ b/org.parallelj.model.edit/plugin.properties
@@ -4,8 +4,8 @@
 #
 # $Id$
 
-pluginName = ParallelJ Edit Support
-providerName = Atos Worldline
+pluginName = //J Edit Support
+providerName = Parallelj.org
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
