--- a/org.parallelj.model.editor/plugin.properties
+++ b/org.parallelj.model.editor/plugin.properties
@@ -4,8 +4,8 @@
 #
 # $Id$
 
-pluginName = ParallelJ Editor
-providerName = Atos Worldline
+pluginName = //J Editor
+providerName = Parallelj.org
 
 _UI_ParallelJEditor_menu = &ParallelJ Editor
 
