--- a/org.parallelj.model/.settings/org.eclipse.core.resources.prefs
+++ b/org.parallelj.model/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Tue Aug 31 11:37:56 CEST 2010
+#Fri Jan 06 12:04:04 CET 2012
 eclipse.preferences.version=1
 encoding//model/parallelj.ecore=UTF-8
 encoding//model/parallelj.ecore_diagram=UTF-8
+encoding/<project>=UTF-8
