--- a/org.parallelj.designer.typeselector.processor.model/pom.xml
+++ b/org.parallelj.designer.typeselector.processor.model/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.parallelj</groupId>
+    <groupId>org.parallelj.studio</groupId>
     <version>0.8.0-SNAPSHOT</version>
     <artifactId>parallelj-studio</artifactId>
   </parent>
