--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
-		<version>3</version>
+		<version>7</version>
 	</parent>
 
 	<groupId>org.parallelj.studio</groupId>
@@ -125,6 +125,34 @@
 				<platform-version-name>indigo</platform-version-name>
 			</properties>
 		</profile>
+		<profile>
+			<id>sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<configuration>
+							<useAgent>true</useAgent>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<modules>
@@ -141,7 +169,7 @@
 		<module>org.parallelj.model</module>
 		<module>org.parallelj.model.edit</module>
 		<module>org.parallelj.model.editor</module>
-		<!-- I promess I'd like to test, but actually this test project is generated 
+		<!-- I promise I'd like to test, but actually this test project is generated 
 			by Eclipse and must be executed in Eclipse. It seems that Maven can't run 
 			that kind of tests for the moment. -->
 		<!--module>org.parallelj.model.tests</module -->
