--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:http://github.com/XA-Labs/org.parallelj.studio.git</connection>
-		<developerConnection>scm:git:git@github.com:XA-Labs/org.parallelj.studio.git</developerConnection>
+		<connection>scm:git:https://github.com/XA-Labs/org.parallelj.studio.git</connection>
+		<developerConnection>scm:git:https://github.com/XA-Labs/org.parallelj.studio.git</developerConnection>
 		<url>https://github.com/XA-Labs/org.parallelj.studio</url>
 	</scm>
 
