Block added inplace of Pipeline in ecore

--- a/org.parallelj.model.edit/plugin.properties
+++ b/org.parallelj.model.edit/plugin.properties
@@ -31,7 +31,6 @@ _UI_Data_type = Data
 _UI_MetaInformationContainer_type = Meta Information Container
 _UI_MetaInformation_type = Meta Information
 _UI_Handler_type = Handler
-_UI_Pipeline_type = Pipeline
 _UI_NamedElement_type = Named Element
 _UI_Unknown_type = Object
 
@@ -58,7 +57,6 @@ _UI_WhileLoop_predicate_feature = Predicate
 _UI_Data_type_feature = Type
 _UI_MetaInformationContainer_metaInformation_feature = Meta Information
 _UI_Handler_procedures_feature = Procedures
-_UI_Pipeline_procedures_feature = Procedures
 _UI_NamedElement_name_feature = Name
 _UI_NamedElement_description_feature = Description
 _UI_Unknown_feature = Unspecified
@@ -69,3 +67,9 @@ _UI_SplitType_XOR_literal = XOR
 _UI_JoinType_AND_literal = AND
 _UI_JoinType_OR_literal = OR
 _UI_JoinType_XOR_literal = XOR
+_UI_Block_type = Block
+_UI_Procedure_executionMode_feature = Execution Mode
+_UI_Block_procedures_feature = Procedures
+_UI_ExecutionMode_PARALLEL_literal = PARALLEL
+_UI_ExecutionMode_ITERATIVE_literal = ITERATIVE
+_UI_ExecutionMode_STREAM_literal = STREAM
