--- a/org.parallelj.model/.settings/controlflow.gmfgen.prefs
+++ b/org.parallelj.model/.settings/controlflow.gmfgen.prefs
@@ -1,4 +1,4 @@
-#Tue May 05 14:58:52 CEST 2009
+#Wed Feb 15 15:55:03 CET 2012
 eclipse.preferences.version=1
 generate_rcp=false
 ignore_gmfgen_validation=false
