--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
 				<version>${tycho-version}</version>
 				<configuration>
 					<includeSources>true</includeSources>
-					<format>${platform-version-name}.${release-type}.'yyyyMMddHHmm'</format>
+					<format>${platform-version-name}.${release-type}.yyyyMMddHHmm</format>
 				</configuration>
 			</plugin>
 			<plugin>
