--- a/org.parallelj.designer.properties/src/main/resources/ui-messages.properties
+++ b/org.parallelj.designer.properties/src/main/resources/ui-messages.properties
@@ -71,3 +71,5 @@ tooltip_stream_execution_mode=Stream execution mode allows to execute a loop usi
 pattern_link=%s ------> %s
 
 error_cast_int=The specified value for the capacity should be an integer. You can use -1 to specify the infinite value.
+
+error_runnable_creation=An unexpected error occured while trying to create the runnable you specified. Please report this problem with the associated stack trace.
