BusinessProcedure added to ecore model

--- a/org.parallelj.model.edit/plugin.properties
+++ b/org.parallelj.model.edit/plugin.properties
@@ -73,3 +73,4 @@ _UI_Block_procedures_feature = Procedures
 _UI_ExecutionMode_PARALLEL_literal = PARALLEL
 _UI_ExecutionMode_ITERATIVE_literal = ITERATIVE
 _UI_ExecutionMode_STREAM_literal = STREAM
+_UI_BusinessProcedure_type = Business Procedure
