--- a/org.parallelj.designer/plugin.properties
+++ b/org.parallelj.designer/plugin.properties
@@ -51,3 +51,4 @@ cmdcategory.desc=ParallelJ Editor Commands
 
 metatype.name.Block_3012=Block
 metatype.name.Procedure_3013=Procedure
+metatype.name.BusinessProcedure_3014=BusinessProcedure
