--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
 		<eclipse-mirror>http://eclipse.ialto.com</eclipse-mirror>
 		<eclipse-site>${eclipse-mirror}/releases/${platform-version-name}</eclipse-site>
 		<resourceselector-site>http://xa-labs.github.com/ResourceSelector/site</resourceselector-site>
-		<release-type>rc1</release-type>
+		<release-type>final</release-type>
 		<ajdt-connector-site>http://dist.springsource.org/release/AJDT/composite/</ajdt-connector-site>
 	</properties>
 
