--- a/org.parallelj.designer.extension/plugin.xml
+++ b/org.parallelj.designer.extension/plugin.xml
@@ -359,6 +359,51 @@
             id="OpenJavaFile"
             name="Open Java File">
       </command>
+      <command
+            defaultHandler="org.parallelj.designer.extension.command.DependencyManagementCommand"
+            id="org.parallelj.designer.extension.dependencyManagement"
+            name="Dependency Management">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="true"
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <menu
+               id="org.eclipse.emf.validationMenuID"
+               label="ParallelJ">
+            <command
+                  commandId="org.parallelj.designer.extension.dependencyManagement"
+                  label="Add Maven dependencies for Business Procedure contributions"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <with
+                        variable="selection">
+                     <iterate
+                           ifEmpty="false"
+                           operator="and">
+                        <test
+                              forcePluginActivation="true"
+                              property="org.parallelj.designer.extension.canDependencyVisible">
+                        </test>
+                     </iterate>
+                  </with>
+               </visibleWhen>
+            </command>
+         </menu>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.core.expressions.propertyTesters">
+      <propertyTester
+            class="org.parallelj.designer.extension.command.DependencyPropertyTester"
+            id="org.parallelj.designer.extension.dependencypropertytester"
+            namespace="org.parallelj.designer.extension"
+            properties="canDependencyVisible"
+            type="org.eclipse.core.runtime.IAdaptable">
+      </propertyTester>
    </extension>
 
 </plugin>
