--- a/org.parallelj.designer.extension/build.properties
+++ b/org.parallelj.designer.extension/build.properties
@@ -5,4 +5,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               schema/
+               schema/,\
+               lib/,\
+               lib/jaxen-1.1.1.jar,\
+               lib/jdom-1.1.1.jar,\
+               lib/saxpath-1.0.jar
