--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 
 
 	<properties>
-		<tycho-version>0.13.0</tycho-version>
+		<tycho-version>0.15.0</tycho-version>
 		<eclipse-mirror>http://eclipse.ialto.com</eclipse-mirror>
 		<eclipse-site>${eclipse-mirror}/releases/${platform-version-name}</eclipse-site>
 		<resourceselector-site>http://xa-labs.github.com/ResourceSelector/site</resourceselector-site>
@@ -169,6 +169,10 @@
 		<!--module>org.parallelj.model.tests</module -->
 		<module>org.parallelj.studio.updatesite</module>
 		<module>org.parallelj.designer.launching</module>
+		<module>org.parallelj.pjl</module>
+		<module>org.parallelj.pjl.tests</module>
+		<module>org.parallelj.pjl.ui</module>
+		<module>org.parallelj.feature.pjl</module>
 	</modules>
 
 	<build>
