Added features for every part of ParallelJ

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,8 @@
 		<module>org.parallelj.pjl.ui</module>
 		<module>org.parallelj.feature.pjl</module>
 		<module>org.parallelj.feature.tools</module>
+		<module>org.parallelj.feature.codegen</module>
+		<module>org.parallelj.feature.all</module>
 	</modules>
 
 	<build>
