--- a/org.parallelj.feature.all/.project
+++ b/org.parallelj.feature.all/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.parallelj.feature</name>
+	<name>org.parallelj.feature.all</name>
 	<comment></comment>
 	<projects>
 	</projects>
