--- a/org.parallelj.feature.all/pom.xml
+++ b/org.parallelj.feature.all/pom.xml
@@ -7,6 +7,6 @@
     <version>1.1.0-SNAPSHOT</version>
     <artifactId>parallelj-studio</artifactId>
   </parent>
-  <artifactId>org.parallelj.feature</artifactId>
+  <artifactId>org.parallelj.feature.all</artifactId>
   <packaging>eclipse-feature</packaging>
 </project>
