--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 		<tycho-version>0.15.0</tycho-version>
 		<eclipse-mirror>http://eclipse.ialto.com</eclipse-mirror>
 		<eclipse-site>${eclipse-mirror}/releases/${platform-version-name}</eclipse-site>
-		<resourceselector-site>http://xa-labs.github.com/ResourceSelector/site</resourceselector-site>
+		<resourceselector-site>http://awltech.github.com/ResourceSelector/site</resourceselector-site>
 		<release-type>final</release-type>
 		<ajdt-connector-site>http://dist.springsource.org/release/AJDT/configurator/</ajdt-connector-site>
 		<ajdt-site>http://download.eclipse.org/tools/ajdt/37/update</ajdt-site>
