--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
 		<eclipse-mirror>http://eclipse.ialto.com</eclipse-mirror>
 		<eclipse-site>${eclipse-mirror}/releases/${platform-version-name}</eclipse-site>
 		<resourceselector-site>http://awltech.github.com/ResourceSelector/site</resourceselector-site>
-		<release-type>SNAPSHOT</release-type>
+		<release-type>final</release-type>
 		<ajdt-connector-site>http://dist.springsource.org/release/AJDT/configurator/</ajdt-connector-site>
 		<ajdt-site>http://download.eclipse.org/tools/ajdt/43/update</ajdt-site>
 		<java.source>1.7</java.source>
