--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,12 @@
 
 	<properties>
 		<tycho-version>0.18.0</tycho-version>
-		<eclipse-mirror>http://eclipse.ialto.com</eclipse-mirror>
-		<eclipse-site>${eclipse-mirror}/releases/${platform-version-name}</eclipse-site>
-		<resourceselector-site>http://awltech.github.com/ResourceSelector/site</resourceselector-site>
 		<release-type>SNAPSHOT</release-type>
 		<ajdt-connector-site>http://dist.springsource.org/release/AJDT/configurator/</ajdt-connector-site>
+		<eclipse-site>${eclipse-mirror}/releases/${platform-version-name}</eclipse-site>
 		<ajdt-site>http://download.eclipse.org/tools/ajdt/43/update</ajdt-site>
+		<eclipse-mirror>http://eclipse.ialto.com</eclipse-mirror>
+		<resourceselector-site>http://eclipse.worldline.com/nightly/resourceselector</resourceselector-site>
 		<optimus-site>http://eclipse.worldline.com/releases/kepler/optimus</optimus-site>
 		<jdt-ast-validation-site>http://eclipse.worldline.com/nightly/jdt-ast-validation</jdt-ast-validation-site>
 		<java.source>1.7</java.source>
