Updating the feature.xml of org.parallelj.feature project and build.properties and plugin.xml of org.parallelj.code.validation project

--- a/org.parallelj.code.validation/plugin.xml
+++ b/org.parallelj.code.validation/plugin.xml
@@ -5,7 +5,8 @@
          point="net.atos.jdt.ast.validation.engine.ASTValidationRules">
       <repository
             id="org.parallelj.code.validation.rule-repository"
-            markerId="org.parallelj.code.validation.marker">
+            markerId="org.parallelj.code.validation.marker"
+            name="ParallelJ Validation Rules ">
             <rule
                   description="Validate the values in AndSplit annotations have corresponding Procedure"
                   implementation="org.parallelj.code.validation.rules.AndSplitValidValuesConstraint">
