--- a/org.parallelj.code.validation/build.properties
+++ b/org.parallelj.code.validation/build.properties
@@ -2,5 +2,4 @@ source.. = src/main/java/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               src/main/resources/ValidationMessages.properties
+               plugin.xml
